# YoloCamera

./: .clangd  .gitignore  CMakeLists.txt
include/: yolo_camera.h
res/: calibration_result.yml  config.yml  infer_option.yml  labels.yml
src/: main.cpp  yolo_camera.cpp
